// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syncApplication should create a TEXT field on the standard Company object 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "The industry of the company",
          "icon": "IconBuildingFactory2",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": false,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Industry",
          "morphId": null,
          "name": "industry",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should delete old field and create equivalent one when field universalIdentifier changes 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "color": null,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUICreatable": true,
          "isUIEditable": true,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "overrides": null,
          "shortcut": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isSystemSideEffect": false,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": "uuid",
            "description": "Id",
            "icon": "Icon123",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": true,
            "label": "Id",
            "morphId": null,
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "UUID",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": "now",
            "description": "Creation date",
            "icon": "IconCalendar",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Creation date",
            "morphId": null,
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "name": "''",
              "source": "'MANUAL'",
            },
            "description": "The creator of the record",
            "icon": "IconCreativeCommonsSa",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Created by",
            "morphId": null,
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Deletion date",
            "icon": "IconCalendarClock",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Deleted at",
            "morphId": null,
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": 0,
            "description": "Position",
            "icon": "IconHierarchy2",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Position",
            "morphId": null,
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "POSITION",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": "now",
            "description": "Last time the record was changed",
            "icon": "IconCalendarClock",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Last update",
            "morphId": null,
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "name": "''",
              "source": "'MANUAL'",
            },
            "description": "The workspace member who last updated the record",
            "icon": "IconUserCircle",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Updated by",
            "morphId": null,
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Search vector",
            "icon": "IconSearch",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Search vector",
            "morphId": null,
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "TS_VECTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Timeline Activity",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Timeline Activities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities Ticket",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Attachment",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments Ticket",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Note Target",
          "icon": "IconNotes",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Notes",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Task Target",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Tasks",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_8da02734dc044074a6a2c224f2a",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_890a5ffa99e9b995803d50f2298",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_d2022a25ca76206ddf16d88efd5",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_7d7a4e9e0805030aee982fdfa31",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "GIN",
          "indexWhereClause": null,
          "isCustom": false,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_72b74c26016bcd3cd20b85c4a28",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should delete old field and create equivalent one when field universalIdentifier changes 2`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationId": Any<String>,
          "applicationUniversalIdentifier": Any<String>,
          "calendarEndViewIds": [],
          "calendarEndViewUniversalIdentifiers": [],
          "calendarViewIds": [],
          "calendarViewUniversalIdentifiers": [],
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Ticket description",
          "fieldPermissionIds": [],
          "fieldPermissionUniversalIdentifiers": [],
          "icon": "IconFileDescription",
          "id": Any<String>,
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": false,
          "isUIEditable": true,
          "isUnique": false,
          "kanbanAggregateOperationViewIds": [],
          "kanbanAggregateOperationViewUniversalIdentifiers": [],
          "label": "Description",
          "mainGroupByFieldMetadataViewIds": [],
          "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
          "morphId": null,
          "name": "description",
          "objectMetadataId": Any<String>,
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataId": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "searchFieldMetadataIds": [],
          "searchFieldMetadataUniversalIdentifiers": [],
          "settings": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
          "viewFieldIds": [],
          "viewFieldUniversalIdentifiers": [],
          "viewFilterIds": [],
          "viewFilterUniversalIdentifiers": [],
          "viewSortIds": [],
          "viewSortUniversalIdentifiers": [],
          "workspaceId": Any<String>,
        },
        "metadataName": "fieldMetadata",
        "type": "delete",
        "universalIdentifier": Any<String>,
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Ticket description",
          "icon": "IconFileDescription",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": false,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Description",
          "morphId": null,
          "name": "description",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should return workspace migration actions on initial sync then on second sync with field rename and new role 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "color": null,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUICreatable": true,
          "isUIEditable": true,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "overrides": null,
          "shortcut": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isSystemSideEffect": false,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": "uuid",
            "description": "Id",
            "icon": "Icon123",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": true,
            "label": "Id",
            "morphId": null,
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "UUID",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": "now",
            "description": "Creation date",
            "icon": "IconCalendar",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Creation date",
            "morphId": null,
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "name": "''",
              "source": "'MANUAL'",
            },
            "description": "The creator of the record",
            "icon": "IconCreativeCommonsSa",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Created by",
            "morphId": null,
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Deletion date",
            "icon": "IconCalendarClock",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Deleted at",
            "morphId": null,
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": 0,
            "description": "Position",
            "icon": "IconHierarchy2",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Position",
            "morphId": null,
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "POSITION",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": "now",
            "description": "Last time the record was changed",
            "icon": "IconCalendarClock",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Last update",
            "morphId": null,
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "name": "''",
              "source": "'MANUAL'",
            },
            "description": "The workspace member who last updated the record",
            "icon": "IconUserCircle",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": false,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Updated by",
            "morphId": null,
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Search vector",
            "icon": "IconSearch",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": false,
            "isUnique": false,
            "label": "Search vector",
            "morphId": null,
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "overrides": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "type": "TS_VECTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Timeline Activity",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Timeline Activities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities Ticket",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Attachment",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments Ticket",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Note Target",
          "icon": "IconNotes",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Notes",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Task Target",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Tasks",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "overrides": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_8da02734dc044074a6a2c224f2a",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_890a5ffa99e9b995803d50f2298",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_d2022a25ca76206ddf16d88efd5",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_7d7a4e9e0805030aee982fdfa31",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "GIN",
          "indexWhereClause": null,
          "isCustom": false,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_72b74c26016bcd3cd20b85c4a28",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "content": "# Test Skill

This is a test skill.",
          "createdAt": Any<String>,
          "description": "A skill for testing",
          "icon": "IconBrain",
          "isActive": true,
          "isCustom": false,
          "label": "Test Skill",
          "name": "test-skill",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "skill",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;
